--- a/html.html
+++ b/html.html
@@ -4,29 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        #input{
-            background: transparent;
-            border: none;
-            -webkit-user-modify: read-only;
-        }
-        #input::selection{
-            background: transparent;
-            color: black;
-        }
-        #input:focus-visible{
-            outline-offset: unset !important;
-            outline: unset !important;
-        }
-        #input:focus-visible,#input:focus{
-            border:none
-        }
-        #execCopy{
-            border: none;
-            background: transparent;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
 </head>
 <body>
